# goldfish

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 기획서.md
examples/: generate_sample.py  sample.csv
goldfish/: __init__.py  cli.py  workspace.py
goldfish/ai/: __init__.py  summarize.py
goldfish/analyzers/: __init__.py  basic.py  finance.py
goldfish/loaders/: __init__.py  csv.py  table.py  toss.py
goldfish/report/: __init__.py  charts.py  html.py  summary.py  text.py
tests/: test_ai.py  test_basic.py  test_charts.py  test_csv_loader.py  test_finance.py  test_html.py  test_init.py  test_table.py  test_toss.py
